--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fastify/jwt": "9.0.4",
     "@prisma/client": "6.4.1",
     "@types/bcryptjs": "2.4.6",
+    "@types/jsonwebtoken": "9.0.9",
     "@types/node": "22.13.5",
     "bcryptjs": "3.0.2",
     "dotenv": "16.4.7",
     "fastify": "5.2.1",
+    "jsonwebtoken": "9.0.2",
     "tsup": "2.0.3",
     "tsx": "4.19.3",
     "typescript": "5.7.3",
