--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "16.4.7",
     "fastify": "5.2.1",
     "jsonwebtoken": "9.0.2",
+    "node-cron": "3.0.3",
     "nodemailer": "6.10.1",
     "tsup": "8.4.0",
     "tsx": "4.19.3",
@@ -30,6 +31,8 @@
     "zod": "3.24.2"
   },
   "devDependencies": {
+    "@types/node-cron": "3.0.11",
+    "@types/nodemailer": "6.4.17",
     "prisma": "6.4.1"
   }
 }
