--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@fastify/cookie": "11.0.2",
     "@fastify/cors": "11.0.0",
     "@fastify/jwt": "9.0.4",
+    "@fastify/multipart": "9.0.3",
+    "@fastify/static": "8.1.1",
     "@prisma/client": "6.4.1",
     "@types/bcryptjs": "2.4.6",
     "@types/jsonwebtoken": "9.0.9",
     "@types/node": "22.13.5",
     "bcryptjs": "3.0.2",
     "dotenv": "16.4.7",
-    "fastify": "5.2.1",
+    "fastify": "5.3.2",
+    "fastify-multer": "2.0.3",
     "jsonwebtoken": "9.0.2",
     "node-cron": "3.0.3",
     "nodemailer": "6.10.1",
@@ -31,6 +34,8 @@
     "zod": "3.24.2"
   },
   "devDependencies": {
+    "@types/express": "5.0.1",
+    "@types/multer": "1.4.12",
     "@types/node-cron": "3.0.11",
     "@types/nodemailer": "6.4.17",
     "prisma": "6.4.1"
